--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Logs
 logs
 *.log
+
+#mac os temp files
+.DS_Store
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -56,4 +60,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
